@@ -10,6 +10,8 @@
  - When no apps/components are available, desensitize app/component list
  - Better sorting on the MIME types tree
  - Category selection
+ - Don't consider a mime type when generating category handler list if the mime type overrides the category default
+ - Implement override_category_default flag
 
 CVS Surgery
  - Move file-types to gnome-control-center, rename ???
